// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton [common] example testing should match snapshot(s) for Interactive 1`] = `
<ul>
  <li
    style="list-style-type:none;display:flex;align-items:center"
  >
    <label>
      Enabled
    </label>
    <span
      class="lucid-RadioButton"
    >
      <input
        class="lucid-RadioButton-native"
        name="interactive-radio-buttons"
        tabindex="20"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
  </li>
</ul>
`;

exports[`RadioButton [common] example testing should match snapshot(s) for States 1`] = `
<ul>
  <li
    style="display:flex;align-items:center"
  >
    <label>
      Unselected
    </label>
    <span
      class="lucid-RadioButton"
    >
      <input
        class="lucid-RadioButton-native"
        tabindex="20"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
  </li>
  <li
    style="display:flex;align-items:center"
  >
    <label>
      Selected
    </label>
    <span
      class="lucid-RadioButton lucid-RadioButton-is-selected"
    >
      <input
        checked=""
        class="lucid-RadioButton-native"
        tabindex="21"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
  </li>
  <li
    style="display:flex;align-items:center"
  >
    <label>
      Disabled
    </label>
    <span
      class="lucid-RadioButton lucid-RadioButton-is-disabled"
    >
      <input
        class="lucid-RadioButton-native"
        disabled=""
        tabindex="22"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
  </li>
  <li
    style="display:flex;align-items:center"
  >
    <label>
      Disabled & selected
    </label>
    <span
      class="lucid-RadioButton lucid-RadioButton-is-disabled lucid-RadioButton-is-selected"
    >
      <input
        checked=""
        class="lucid-RadioButton-native"
        disabled=""
        tabindex="23"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
  </li>
</ul>
`;
